Negative z-index layer inside stacking context fails to composite when overlapping external composited layer https://bugs.webkit.org/show_bug.cgi?id=272318 rdar://130595406

Reviewed by NOBODY (OOPS!).

When a layer has negative z-order children and isn't yet composited, we push a speculative
compositing container onto the overlap map. The intent (from bug 244543) was to prevent
those children from polluting the overlap map and causing unnecessary compositing of later
siblings. However, overlapsLayers() returns false unconditionally while the speculative
stack is active, which prevents negative z-index children from detecting genuine overlap
with already-composited layers from earlier in paint order.

This means a negative z-index child inside a z-index: 1 stacking context that geometrically
overlaps a composited layer (z-index: auto/0) outside the stacking context never gets
composited for overlap, so it paints into the root backing store behind the composited
layer's GraphicsLayer — wrong stacking order.

The fix is to check overlap against the parent scope in the speculative stack instead of
returning false. This scope is a snapshot of the overlap state before the speculative push,
so it correctly contains bounds of already-composited layers. The speculative container
at the top of the stack is still empty (as asserted), so negative z-index children's own
bounds don't leak into the overlap map for later siblings, preserving the fix for bug 244543.

* Source/WebCore/rendering/LayerOverlapMap.cpp:
(WebCore::LayerOverlapMap::overlapsLayers const):
* LayoutTests/compositing/z-order/multiple-negative-z-in-stacking-context-above-composited-expected.html: Added.
* LayoutTests/compositing/z-order/multiple-negative-z-in-stacking-context-above-composited.html: Added.
* LayoutTests/compositing/z-order/negative-z-in-stacking-context-above-composited-expected.html: Added.
* LayoutTests/compositing/z-order/negative-z-in-stacking-context-above-composited.html: Added.
* LayoutTests/compositing/z-order/negative-z-overlap-and-non-overlap-with-composited-expected.html: Added.
* LayoutTests/compositing/z-order/negative-z-overlap-and-non-overlap-with-composited.html: Added.